--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@
 services:
   - type: web
     name: forecast-api
-    env: python
+    runtime: python
     buildCommand: pip install -r requirements-api.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 2 --timeout 120
     envVars:
