--- a/requirements-api.txt
+++ b/requirements-api.txt
@@ -1,17 +1,17 @@
 # Bank Balance Forecasting API - Render Deployment
 # Core dependencies
 
-flask==3.0.0
-flask-cors==4.0.0
-gunicorn==21.2.0
+flask>=3.0.0
+flask-cors>=4.0.0
+gunicorn>=21.2.0
 
 # Data processing
-pandas==2.1.4
-numpy==1.26.2
+pandas>=2.2.0
+numpy>=1.26.0
 
 # Machine Learning
-xgboost==2.0.3
-scikit-learn==1.3.2
+xgboost>=2.0.0
+scikit-learn>=1.4.0
 
 # Excel support (optional, for file uploads)
-openpyxl==3.1.2
+openpyxl>=3.1.0
